corrected overlap with warnings on smallscreens

--- a/css/index.css
+++ b/css/index.css
@@ -198,5 +198,9 @@ h1 {
     padding: 10px;
   }
 
+  .warnings {
+    margin-top:50px;
+  }
+
 
 }
